# Pi-Jarvis

./: CMakeLists.txt  CMakePresets.json  commands.json  setup.sh
include/: Button.h  CommandMapping.h  ConnectionState.h  DeviceConnect.h  DeviceWidget.h  MainWindow.h  PiJ.h  ToggleWidget.h
src/: Button.cpp  CommandMapping.cpp  ConnectionState.cpp  DeviceConnect.cpp  DeviceWidget.cpp  MainWindow.cpp  ToggleWidget.cpp  main.cpp
